# sample-spec-driven-presentation-maker

./: .ash.yaml  .dockerignore  .gitignore  CONTRIBUTING.md  Makefile  NOTICE  PENDING_ITEMS.md  README.md  README_ja.md  SECURITY.md  THIRD-PARTY-LICENSES  buildspec.yml  pyproject.toml
.github/workflows/: ash.yml  blog-draft.yml  build-desktop.yml  ci.yml  require-blog-label.yml
.kiro/agents/: sdpm-composer.json  sdpm-spec.json
.kiro/steering/: principles.md  steering-policy.md  tech-public.md  tech.md  versioning.md
agent/: Dockerfile  README.md  README_ja.md  agent_factory.py  basic_agent.py  composer.py  composition.py  factory.py  mcp_clients.py  modes.py  prefetch.py  requirements.txt  streaming.py
agent/modes/: __init__.py
agent/prompts/: __init__.py  composer.md  single_agent.md  (+2 more)
api/: authz.py  common.py  index.py  requirements.txt
desktop/: DISTRIBUTION.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
infra/: cdk.json  config.example.yaml  package-lock.json  package.json  tsconfig.json
mcp-local/: README.md  compose.py  pyproject.toml  server.py  server_acp.py  tools.py  upload_tools.py
mcp-local/.kiro/agents/: sdpm-composer.json  sdpm-spec.json  sdpm-vibe.json
mcp-server/: Dockerfile  README.md  pyproject.toml  server.py  server_utils.py
png-worker/: Dockerfile  main.py  requirements.txt
prompts/: composer-agent.md  spec-agent-acp.md  spec-agent.md  system-prompt.md
scripts/: backfill_vectors.py  deploy.sh  deploy_webui.sh  generate_aws_exports.py  migrate_deck_schema.py  show_endpoints.sh  upload_assets.py  upload_template.py  verify_concurrent_session.py  verify_keepalive_dump.py
sdpm_app/: README.md  __init__.py  __main__.py  build-web.sh  pyproject.toml  server.py
shared/: __init__.py  authz.py  ingest.py  preview.py  resources.py  schema.py
skill/: SKILL.md  pyproject.toml
skill/references/examples/: components.pptx  patterns.pptx
skill/references/guides/: chart-bar.md  chart-line.md  chart-pie.md  setup.md  source-material-guide.md
skill/references/workflows/: create-new-1-art-direction.md  create-new-1-briefing.md  create-new-2-compose.md  create-new-3-review.md  create-new-4-hand-edit-sync.md  create-style.md  edit-existing.md  slide-json-spec.md  translate-pptx.md
skill/scripts/: package_zip.sh  pptx_builder.py
skill/sdpm/: __init__.py  api.py  config.py
skill/sdpm/analyzer/: __init__.py
skill/sdpm/assets/: __init__.py
skill/sdpm/builder/: __init__.py  placeholder.py
skill/sdpm/builder/elements/: image.py  line.py  shape.py  table.py  textbox.py
skill/sdpm/converter/: constants.py  elements.py  pipeline.py  slide.py  table.py
skill/sdpm/diff/: __init__.py
skill/sdpm/preview/: __init__.py  autofit.py  backend.py  measure.py
skill/sdpm/reference/: __init__.py
skill/sdpm/schema/: lint.py  lint_outline.py
skill/sdpm/utils/: svg.py
skill/templates/: sample_template_dark.pptx  sample_template_light.pptx
tests/: conftest.py  test_assets.py  test_authz.py  test_deck.py  test_lint.py  test_reference.py
web-ui/: README.md  README_ja.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs
(+173 files in other folders)
