[project]
name = "sdpm-app"
version = "0.1.0"
description = "SDPM local app — browser UI + ACP agent manager"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sdpm-skill",
]

[project.scripts]
sdpm = "sdpm_app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sdpm_app"]

[tool.hatch.build.targets.wheel.force-include]
"sdpm_app/web" = "sdpm_app/web"

[tool.uv.sources]
sdpm-skill = { path = "../skill" }
